<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_screen"
    android:clickable="false">

    <ImageView
        android:layout_width="153dp"
        android:layout_height="87dp"
        android:id="@+id/buttonGo"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goClicked"
        android:background="@drawable/go_base"/>

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:id="@+id/iconMap"
        android:layout_alignBottom="@+id/buttonGo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:background="@drawable/icon_map"
        android:clickable="true"
        android:onClick="openMap" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:id="@+id/iconList"
        android:layout_alignBottom="@+id/buttonGo"
        android:layout_toEndOf="@+id/buttonGo"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:background="@drawable/icon_list"
        android:longClickable="false"
        android:onClick="listMapsImageClicked" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:id="@+id/iconMenu"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/iconList"
        android:background="@drawable/icon_menu"
        android:onClick="openConfig" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:id="@+id/iconSearch"
        android:background="@drawable/icon_search"
        android:layout_alignTop="@+id/iconMenu"
        android:layout_alignStart="@+id/iconList"
        android:clickable="true"
        android:onClick="open_search"
        android:cropToPadding="false" />


    <ListView android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/list_of_hospitalUnit"
        android:layout_below="@+id/iconMenu"
        android:layout_alignLeft="@drawable/base_screen"
        android:layout_alignRight="@drawable/base_screen"
        android:layout_above="@+id/buttonGo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

