...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:id="@+id/buttonOkay"
        android:layout_weight="0.23"
        android:layout_marginTop="29dp"
        android:background="@drawable/inicial_bem"
        android:clickable="true"
        android:onClick="okayClicked"
        android:layout_gravity="center"
...
